<resources>
    <string name="app_name">ToDo_Alarm</string>
    <string name="hint">할 일을 입력해주세요</string>
    <string name="to_do">%s</string>
    <string name="to_do_title">%s</string>
    <string name="to_do_time">%d:%d</string>
    <string name="btn_plus">+</string>

    <string name="alarm_title">알람시간</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_confirm">확인</string>
</resources>