<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/hint"
        android:text="@string/alarm_title"
        android:paddingStart="20dp"
        android:inputType="text"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/nsr"
        android:paddingBottom="10dp"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/etCategory"
        app:stackFromEnd="true" />

    <Button
        android:id="@+id/btnAddContent"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_plus"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/btn_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rvContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>