<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".AlarmFragment">

    <TextView
        android:id="@+id/tvAlarmTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/alarm_title"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlarmTitle" />

    <TimePicker
        android:id="@+id/tpAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlarmTitle" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/btn_cancel"
        android:text="@string/btn_cancel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tpAlarm" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_confirm"
        android:text="@string/btn_confirm"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tpAlarm" />


</androidx.constraintlayout.widget.ConstraintLayout>